# bedblocks

./: Cargo.toml  README.md  bedblocks  example.bed
src/: lib.rs  main.rs
