[package]
name = "bedblocks"
description = "Split a BED file into blocks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.6.0"
clap = { version = "4.0", features = ["derive"] }
clap-stdin = "0.4.0"
